Rename from hairdresser to hairsalon
